[project]
name = "booking-cancellation-classification"
version = "0.1.0"
description = "Follow Along of the Notebook by Farzad Nekouei (https://www.kaggle.com/code/farzadnekouei/hotel-booking-cancellation-prediction)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["numpy", "pandas", "matplotlib", "seaborn", "scikit-learn"]

[dependency-groups]
dev = ["jupyter", "jupyterlab-code-formatter", "black"]
